# task-tracker-cli

./: .gitignore  pyproject.toml
src/: general.py  models.py  tasks.py
src/task_tracker/: __main__.py  cli.py  general.py  logger.py  models.py  run.py  tasks.py
src/task_tracker/flows/: add_flow.py  delete_flow.py  mark_flow.py  update_flow.py
tests/: test_tasks_repo_methods.py
